feat: Complete WaveExecutionWorkflow with full UI, Docker setup, and HITL signals
This commit implements the end-to-end wave execution workflow with human-in-the-loop
(HITL) capabilities across all four microservices (OMS, IMS, WMS, SMS).

## Temporal Orchestration
- Implement WaveExecutionWorkflow with full signal/query support
- Add signals: allPicksCompleted, allPacksCompleted, rateSelected, printLabel,
  shipmentConfirmed, cancelWave
- Add queries: getWaveStatus, getCurrentStep, getBlockingReason, getShipmentStates
- Implement compensation logic for inventory release on cancellation
- Add rate shopping activities (FetchRates, SelectRate) in SMS
- Add UpdateWaveStatusActivity for workflow-to-DB sync

## Backend Services
- OMS: Add OrderController, OrderService, Order/OrderLine entities and repositories
- OMS: Add workflow_id column to orders (V2 migration)
- OMS: Add OmsActivitiesImpl for cross-service activity calls
- IMS: Update ItemController for tenant-based queries
- WMS: Add demo facility seed data (V3 migration)
- WMS: Add WorkflowStatusResponse, ShipmentStatesResponse DTOs
- SMS: Add FetchRatesActivity, SelectRateActivity with stub implementations
- Update all Temporal worker configs for new activities

## Common DTOs (tempest-common)
- Add CarrierRateDTO, ShipmentStateDTO
- Add FetchRatesRequest/Result, SelectRateRequest/Result
- Add UpdateWaveStatusRequest/Result
- Move OmsActivities interface to common for cross-service use
- Simplify SecurityConfig (remove unused JWT validators)

## Next.js UI
- Add complete dashboard, items, orders, waves, shipments, settings pages
- Add wave detail page with real-time workflow status polling
- Add rate shopping modal for carrier selection
- Add shipments card with print label/confirm shipped actions
- Implement shadcn/ui components (18 components)
- Add shared components: PageHeader, StatusBadge, DataCard, WorkflowStatusCard
- Add MainLayout with sidebar navigation
- Add object models: ItemObject, OrderObject, WaveO